# mantecato-analytics

./: .clinerules  .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_MIGRATION_PLAN.md  Dockerfile  Dockerfile.cli  Dockerfile.standalone  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_PLAN.md  PLAN.md  README.md  REPORT_v4_next_vs_main.md  dev.sh  docker-compose.yaml  docker-compose.yml  manage.py  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  render.yaml  tsconfig.json
.claude/commands/: analytics.md  content-audit.md  (+2 more)
.ralph/: ralph-history.json  ralph-loop.state.json
backend/: Dockerfile  Procfile  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  date_utils.py  dependencies.py  main.py  models.py
backend/app/cli/: helpers.py  main.py  report.py
backend/app/mcp/: server.py
backend/app/queries/: annotations.py  api_keys.py  compare.py  dashboards.py  devices.py  engagement.py  events.py  filter_values.py  funnels.py  geo.py  journeys.py  pageviews.py  realtime.py  retention.py  revenue.py  saved_views.py  scheduled_exports.py  sessions.py  sources.py  stats.py
backend/app/routers/: __init__.py  annotations.py  api_keys.py  auth.py  bot_config.py  compare.py  cron.py  dashboards.py  devices.py  engagement.py  events.py  filter_values.py  funnels.py  geo.py  journeys.py  pages.py  realtime.py  retention.py  revenue.py  saved_views.py  scheduled_exports.py  script.py  sessions.py  share.py  sites.py  sources.py  stats.py
cli/: Dockerfile  README.md  pyproject.toml
cli/mantecato_cli/: app.py  bootstrap.py  config.py  helpers.py  main.py  report.py  tui.py
cli/mantecato_cli/commands/: __init__.py  analytics.py  crud.py  queries.py
core/: pyproject.toml
demo/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml  seed.sql  start.sh  stop.sh
docs/: RAILWAY.md  accuracy.md  ai-agents.md  authentication.md  cli.md  data-processing-record.md  docker.md  mcp-server.md  privacy.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
mantecato/: asgi.py  config.py  middleware.py  settings.py  urls.py  wsgi.py
mcp/: Dockerfile  pyproject.toml
mcp/mantecato_mcp/: remote.py  server.py
prisma/: schema.prisma
scripts/: seed_umami.sql
src/: middleware.ts  proxy.ts
templates/: base.html  login.html
tests/: conftest.py  test_analytics_advanced_pages.py  test_analytics_overview.py  test_analytics_realtime.py  test_analytics_standard_pages.py  test_api_endpoints.py  test_api_key_middleware.py  test_auth_views.py  test_badge.py  test_cli.py  test_common_json_views.py  test_common_mixins.py  test_crud_pages.py  test_crud_services.py  test_dashboard_widgets.py  test_deploy_config.py  test_health.py  test_management_commands.py  test_models.py  test_query_engine.py  test_query_engine_bridge.py  test_query_modules_analytics.py  test_query_modules_base.py  test_route_smoke.py  test_sources_and_bots.py  test_templates.py  test_tracker_ip.py  test_umami_import.py  test_user_management.py  test_visitor_counting.py
(+362 files in other folders)
