[project]
name = "mantecato-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mantecato-core>=0.1.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "uvicorn[standard]>=0.34",
    "starlette>=0.45",
]

[project.scripts]
mantecato-mcp = "mantecato_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
